--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "long": "4.0.0",
     "multiformats": "11.0.0",
     "sha256": "^0.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "@types/node": "^16.11.6",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
   }
 }
