--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
     "bitcoinjs-lib": "^6.1.0",
     "eth-crypto": "^2.5.0",
     "ethers": "^5.7.2",
-    "lit-js-sdk": "^1.2.59",
+    "global": "^4.4.0",
+    "lit-js-sdk": "^1.3.3",
     "long": "4.0.0",
     "multiformats": "11.0.0",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
